fix(ui): align view-toggle and section header button heights to 44px

--- a/_sass/components/_blog.scss
+++ b/_sass/components/_blog.scss
@@ -102,7 +102,7 @@ html[data-blog-view='list'] .view-toggle__btn[data-view='list'] {
   display: inline-flex;
   align-items: center;
   gap: $sp-2;
-  height: 38px;
+  height: 44px;
   padding: 0 $sp-3;
   font-size: $fs-sm;
   font-weight: 600;
