--- a/_sass/components/_hero.scss
+++ b/_sass/components/_hero.scss
@@ -187,7 +187,7 @@
   &__link {
     display: inline-flex;
     align-items: center;
-    height: 38px;
+    height: 44px;
     padding: 0 $sp-3;
     font-size: $fs-sm;
     font-weight: 600;
